# Carla-OSI-Service

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  CMakeLists.txt  Configuration.md  Dockerfile  Dockerfile18  Dockerfile4OstarCore  README.md  TODOs.txt  conanfile.txt  config.yaml
.gitlab/issue_templates/: bug.md  feature_request.md
CMakeModules/: FetchGRPC.cmake  FetchLibCarla_client.cmake  FetchOpenSimulationInterface.cmake  FindCatch2.cmake  FindLibCarla_client.cmake  GenerateGRPC.cmake
grpc_proto_files/: CoSiMaMessages.proto
grpc_proto_files/base_interface/: BaseInterface.proto  CARLAInterface.proto
grpc_proto_files/srunner/: ScenarioRunner.proto
include/: CARLA-OSI.h  CARLA2OSIInterface.h  CARLA_GroundTruth.h  CARLA_Interface.h  CARLA_Module.h  CARLA_OSI_Interface.h  CARLA_OSI_gRPC.h  CARLA_SensorView.h  CARLA_SensorViewConfiguration.h  CARLA_TrafficCommand.h  CARLA_TrafficUpdate.h  CMakeLists.txt  CoSiMa.h  CoSiMa.h.in  Logger.h  MessageCache.h  ParameterDefinitions.h  Semaphore.h  SimulationInterfaceFactory.h  Utility.h
include/ScenarioRunner/: TrafficCommandReceiver.h
include/base_interfaces/: BaseSystemInterface.h  CARLAInterface.h  CMakeLists.txt  DominionInterface.h
include/base_interfaces/Carla/: Carla2OSI_TODOs.txt  Utility.h
include/carla_osi/: CMakeLists.txt  Geometry.h  Identifiers.h  Lanes.h  TrafficSignals.h
include/configreader/: BaseConfigVariants.h  CMakeLists.txt  StandardYAMLConfig.h  YAMLConfigReader.h
include/mapper/: CMakeLists.txt  FMIMapper.h  Mapper.h  NamesAndIndex.h  OSIMapper.h  ROSMapper.h  SUMOMapper.h  UnrealMapper.h  VTDMapper.h
include/simulation_interfaces/: CMakeLists.txt  DCPBridge.h  FMIBridge.h  OSIBridge.h  OSIMessages.h  OSMPBridge.h  ROSBridge.h  SUMOBridge.h  UnrealBridge.h  VTDBridge.h  iSimulationData.h  internalState.h
lib/: .gitignore
src/: CARLA-OSI.cpp  CARLA2OSIInterface.cpp  CARLA_GroundTruth.cpp  CARLA_Interface.cpp  CARLA_OSI_Client.cpp  CARLA_OSI_Interface.cpp  CARLA_OSI_Service.cpp  CARLA_OSI_gRPC.cpp  CARLA_SensorView.cpp  CARLA_SensorViewConfiguration.cpp  CARLA_TrafficCommand.cpp  CARLA_TrafficUpdate.cpp  CMakeLists.txt  CoSiMa.cpp  Logger.cpp  MessageCache.cpp  SimulationInterfaceFactory.cpp  Utility.cpp
src/ScenarioRunner/: TrafficCommandReceiver.cpp
src/base_interfaces/: CARLAInterface.cpp  CMakeLists.txt  DominionInterface.cpp
src/base_interfaces/Carla/: Utility.cpp
src/carla_osi/: CMakeLists.txt  Geometry.cpp  Identifiers.cpp  Lanes.cpp  TrafficSignals.cpp
src/configreader/: CMakeLists.txt  YAMLConfigReader.cpp
src/mapper/: CMakeLists.txt  FMIMapper.cpp  Mapper.cpp  OSIMapper.cpp  ROSMapper.cpp  SUMOMapper.cpp  UnrealMapper.cpp  VTDMapper.cpp
src/simulation_interfaces/: CMakeLists.txt  DCPBridge.cpp  FMIBridge.cpp  OSIBridge.cpp  OSMPBridge.cpp  ROSBridge.cpp  SUMOBridge.cpp  UnrealBridge.cpp  VTDBridge.cpp  iSimulationData.cpp
test/: CMakeLists.txt  MockBaseSimulator.cpp  MockInterfaceSimulator.cpp  MockMapper.cpp  test-isimulationdata.cpp  testhelpers.h  tests-CARLA-OSI.cpp  tests-CARLA2OSIInterface.cpp  tests-CARLABaseSystemInterface.cpp  tests-CARLAUtility.cpp  tests-FMIInterface.cpp  tests-OSIBridge.cpp  tests-OSMPInterface.cpp  tests-mapper.cpp  tests-simulationinterfacefactory.cpp  tests-yaml_reader.cpp
test/resources/: Feedthrough_cs.fmu  Feedthrough_cs_me.fmu  Feedthrough_me.fmu  modelDescription.in.xml  testconfig1.yaml  testconfig2.yaml  testconfig3.yaml
